[tool.poetry]
name = "dvrprl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gymnasium = {extras = ["accept-rom-license", "atari"], version = "^0.29.1"}
einops = "^0.6.1"
networkx = "^3.1"
matplotlib = "^3.7.2"
ipykernel = "^6.24.0"
pytest = "^7.4.0"
torch = {version = "^2.0.1+cpu", source = "pytorch"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch"}
tensorboard = "^2.13.0"
tqdm = "^4.66.0"
ipywidgets = "^8.1.0"
gym = "^0.26.2"
ale-py = "^0.8.1"
pandas = "^2.1.3"
featuretools = "^1.28.0"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
